--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --gray1: #EFF5F9;
   --gray2: #CCCCCC;
@@ -69,6 +68,39 @@ a {
   transform: translate(-50%, -50%);
 }
 
+#loading {
+  width: 80px;
+}
+#loading path {
+  fill-opacity: 0;
+  fill: none;
+  stroke: var(--gray1);
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  stroke-width: 10px;
+  transform-origin: center top;
+}
+#loading .done #path1 {
+  animation: loadinganime1 1200ms;
+  animation-fill-mode: forwards;
+}
+#loading .done #path2, #loading .done #path3 {
+  animation: loadinganime2 1200ms;
+  animation-fill-mode: forwards;
+  transform: translateX(-9px);
+}
+
+@keyframes loadinganime1 {
+  100% {
+    stroke-width: 15px;
+    scale: 0.7;
+  }
+}
+@keyframes loadinganime2 {
+  100% {
+    transform: translateY(-110px);
+  }
+}
 /* header---------------------------- */
 header {
   position: relative;
@@ -794,38 +826,4 @@ footer .footer-right .footer-sns a {
 }
 footer .footer-right .footer-sns a i {
   margin-right: 10px;
-}
-
-/* ローディング---------------------------- */
-#loading {
-  width: 80px;
-}
-#loading path {
-  fill-opacity: 0;
-  fill: none;
-  stroke: var(--gray1);
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  stroke-width: 10px;
-  transform-origin: center top;
-}
-#loading .done #path1 {
-  animation: loadinganime1 1200ms;
-  animation-fill-mode: forwards;
-}
-#loading .done #path2, #loading .done #path3 {
-  animation: loadinganime2 1200ms;
-  animation-fill-mode: forwards;
-}
-
-@keyframes loadinganime1 {
-  100% {
-    stroke-width: 15px;
-    scale: 0.7;
-  }
-}
-@keyframes loadinganime2 {
-  100% {
-    transform: translate(-9px, -110px);
-  }
 }/*# sourceMappingURL=style.css.map */
