--- a/style.scss
+++ b/style.scss
@@ -94,7 +94,7 @@ a {
 }
 @keyframes loadinganime2 {
   100% {
-    transform: translateY(-110px);
+    transform: translate(-9px,-110px);
   }
 }
 /* header---------------------------- */
