--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ a {
 }
 @keyframes loadinganime2 {
   100% {
-    transform: translateY(-110px);
+    transform: translate(-9px, -110px);
   }
 }
 /* header---------------------------- */
