--- a/style.scss
+++ b/style.scss
@@ -61,41 +61,7 @@ a {
     left: 50%;
     transform: translate(-50%,-50%);
   }
-}
-#loading {
-  width: 80px;
-  path {
-    fill-opacity: 0;
-    fill: none;
-    stroke: var(--gray1);
-    stroke-linejoin: round;
-    stroke-linecap: round;
-    stroke-width: 10px;
-    transform-origin: center top;
-  }
-  .done {
-    #path1 {
-      animation: loadinganime1 1200ms;
-      animation-fill-mode: forwards;
 
-    }
-    #path2,#path3 {
-      animation: loadinganime2 1200ms;
-      animation-fill-mode: forwards;
-      transform: translateX(-9px);
-    }
-  }
-}
-@keyframes loadinganime1 {
-  100% {
-    stroke-width: 15px;
-    scale: 0.7;
-  }
-}
-@keyframes loadinganime2 {
-  100% {
-    transform: translate(-9px,-110px);
-  }
 }
 /* header---------------------------- */
 header {
@@ -824,3 +790,39 @@ footer {
     }
   }
 }
+/* ローディング---------------------------- */
+#loading {
+  width: 80px;
+  path {
+    fill-opacity: 0;
+    fill: none;
+    stroke: var(--gray1);
+    stroke-linejoin: round;
+    stroke-linecap: round;
+    stroke-width: 10px;
+    transform-origin: center top;
+  }
+  .done {
+    #path1 {
+      animation: loadinganime1 1200ms;
+      animation-fill-mode: forwards;
+
+    }
+    #path2,#path3 {
+      animation: loadinganime2 1200ms;
+      animation-fill-mode: forwards;
+    }
+  }
+}
+@keyframes loadinganime1 {
+  100% {
+    stroke-width: 15px;
+    scale: 0.7;
+  }
+}
+@keyframes loadinganime2 {
+  100% {
+    transform: translate(0px,-110px);
+  }
+}
+
