--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 :root {
   --gray1: #EFF5F9;
   --gray2: #CCCCCC;
@@ -52,6 +51,10 @@ a {
   font-family: var(--eb);
 }
 
+.pc-only {
+  display: none;
+}
+
 /* loading---------------------------- */
 .loading {
   position: fixed;
@@ -69,6 +72,38 @@ a {
   transform: translate(-50%, -50%);
 }
 
+#loading {
+  width: 80px;
+}
+#loading path {
+  fill-opacity: 0;
+  fill: none;
+  stroke: var(--gray1);
+  stroke-linejoin: round;
+  stroke-linecap: round;
+  stroke-width: 10px;
+  transform-origin: center top;
+}
+#loading .done #path1 {
+  animation: loadinganime1 1200ms;
+  animation-fill-mode: forwards;
+}
+#loading .done #path2, #loading .done #path3 {
+  animation: loadinganime2 1200ms;
+  animation-fill-mode: forwards;
+}
+
+@keyframes loadinganime1 {
+  100% {
+    stroke-width: 15px;
+    scale: 0.7;
+  }
+}
+@keyframes loadinganime2 {
+  100% {
+    transform: translate(0px, -110px);
+  }
+}
 /* header---------------------------- */
 header {
   position: relative;
@@ -485,6 +520,7 @@ header nav.panelactive .buy-content .buy-bottom .amazon img {
   height: 1170px;
   border: 2px solid var(--navy);
   transform-origin: center top;
+  display: none;
 }
 .howto::after {
   content: "";
@@ -536,10 +572,21 @@ header nav.panelactive .buy-content .buy-bottom .amazon img {
   margin: 0 auto;
   display: inline-block;
 }
+.howto .howto-text .howto-text-wrapper {
+  display: flex;
+  margin: 0 auto;
+}
+.howto .howto-text img {
+  width: 25px;
+  -o-object-fit: contain;
+     object-fit: contain;
+  margin-right: 10px;
+  margin-left: 30px;
+}
 .howto .howto-text p {
   text-align: left;
 }
-.howto .howto-text p:nth-of-type(2) {
+.howto .howto-text .howto-last {
   font-size: 14px;
   margin-top: 52px;
 }
@@ -794,38 +841,4 @@ footer .footer-right .footer-sns a {
 }
 footer .footer-right .footer-sns a i {
   margin-right: 10px;
-}
-
-/* ローディング---------------------------- */
-#loading {
-  width: 80px;
-}
-#loading path {
-  fill-opacity: 0;
-  fill: none;
-  stroke: var(--gray1);
-  stroke-linejoin: round;
-  stroke-linecap: round;
-  stroke-width: 10px;
-  transform-origin: center top;
-}
-#loading .done #path1 {
-  animation: loadinganime1 1200ms;
-  animation-fill-mode: forwards;
-}
-#loading .done #path2, #loading .done #path3 {
-  animation: loadinganime2 1200ms;
-  animation-fill-mode: forwards;
-}
-
-@keyframes loadinganime1 {
-  100% {
-    stroke-width: 15px;
-    scale: 0.7;
-  }
-}
-@keyframes loadinganime2 {
-  100% {
-    transform: translate(0px, -110px);
-  }
 }/*# sourceMappingURL=style.css.map */
