--- a/style.scss
+++ b/style.scss
@@ -1,4 +1,12 @@
 @charset "UTF-8";
+@font-face {
+	font-family: "EBGaramond";
+	src: url("font/EBGaramond-Regular.ttf") ;
+}
+@font-face {
+	font-family: "ShipporiMincho";
+	src: url("font/ShipporiMincho-Medium.ttf") ;
+}
 :root {
   --gray1: #EFF5F9;
   --gray2: #CCCCCC;
@@ -6,15 +14,15 @@
   --black: #232323;
   --navy: #073061;
   --blue: #98A9BE;
-  --eb: 'EB Garamond', serif;
-  --sm: 'Shippori Mincho', serif;
+  --eb: "EBGaramond", serif;
+  --sm: "ShipporiMincho", serif;
 }
 
 body {
   font-size: 14px;
   line-height: 2;
   letter-spacing: 0.1em;
-  font-family: 'Shippori Mincho', serif;
+  font-family: "ShipporiMincho", serif;
   font-weight: 500;
   color: var(--black);
   background-color: var(--gray1);
@@ -44,6 +52,7 @@ a {
 }
 .eb {
   font-family: var(--eb);
+  font-weight: 400;
 }
 .pc-only {
   display: none;
@@ -199,7 +208,6 @@ header {
       top: 48%;
       left: 50%;
       transform: translate(-50%,-50%);
-      font-family: var(--eb);
       font-size: 24px;
       li {
         a:hover {
@@ -283,7 +291,6 @@ header {
     position: absolute;
     top: 420px;
     right: 43px;
-    font-family: var(--eb);
     font-size: 53px;
     color: white;
     letter-spacing: 0.16em;
@@ -413,6 +420,7 @@ header {
       position: absolute;
       .feature-number {
         font-family: var(--eb);
+        font-weight: 400;
         font-size: 32px;
       }
       .feature-line {
