--- a/style.scss
+++ b/style.scss
@@ -6,6 +6,7 @@
 @font-face {
 	font-family: "ShipporiMincho";
 	src: url("font/ShipporiMincho-Medium.ttf") ;
+  font-display: swap;
 }
 :root {
   --gray1: #EFF5F9;
