--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 @font-face {
   font-family: "ShipporiMincho";
   src: url("font/ShipporiMincho-Medium.ttf");
+  font-display: swap;
 }
 :root {
   --gray1: #EFF5F9;
