--- a/responsive.scss
+++ b/responsive.scss
@@ -14,7 +14,7 @@
         font-size: 16px;
     }
     main {
-        top: -146px;
+        top: -155px;
     }
     .container {
         max-width: 1140px;
@@ -27,7 +27,7 @@
         display: block;
     }
     .pc-only {
-        display: block;
+        display: inline-block;
     }
     /* header------------------------------------ */
     header {
@@ -109,7 +109,6 @@
     }
     /* mainvisual------------------------------------------ */
     .mainvisual {
-        height: auto;
         height: 134vh;
         .mainvisual1 {
             width: 43%;
