--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
 
 main {
   position: relative;
-  top: -126px;
+  top: -133px;
 }
 
 section {
@@ -46,6 +46,15 @@ section {
 a {
   display: inline-block;
   transition: all 0.3s;
+  text-decoration: none;
+  color: inherit;
+}
+a:visited {
+  color: inherit;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal;
 }
 
 .btn {
