--- a/style.scss
+++ b/style.scss
@@ -31,7 +31,7 @@ body {
 }
 main {
   position: relative;
-  top: -126px;
+  top: -133px;
 }
 section {
   overflow-x: hidden;
@@ -43,6 +43,14 @@ section {
 a {
   display: inline-block;
   transition: all 0.3s;
+  text-decoration: none;
+  color: inherit;
+  &:visited {
+    color: inherit;
+  }
+}
+h1,h2,h3,h4,h5,h6 {
+  font-weight: normal;
 }
 .btn {
   text-align: center;
